<resources>
    <string name="app_name">Griffin Time</string>
    <string name="time_label">It\'s currently:</string>
    <string name="next_button_text">Yes</string>
    <string name="time_placeholder">--</string>
    <string name="next_criteria_placeholder">...</string>
    <string name="notification_next_action">Yes</string>
    <string name="griffin_image_content_description">Griffin</string>
    <string name="pref_show_notification_title">Show Notification</string>
    <string name="pref_show_notification_summary">Show the current Griffin Time as a notification</string>
    <string name="pref_ongoing_notification_title">Ongoing Notification</string>
    <string name="pref_ongoing_notification_summary">Prevents the Griffin Time notification from being dismissed individually or via the \"Clear All\" button</string>
    <string name="settings_action">Settings</string>
</resources>
