<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_bg">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:paddingBottom="4dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:scaleType="fitStart"
        android:src="@drawable/griff_forbes_trans_round"
        android:contentDescription="@string/griffin_image_content_description"/>

    <LinearLayout
        android:id="@+id/textLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_toEndOf="@+id/imageView"
        android:layout_toStartOf="@+id/nextButton"
        android:orientation="vertical">

        <TextView
            android:id="@+id/timeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_placeholder"
            android:textColor="@color/primaryTextColor"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="It's Lunch"/>

        <TextView
            android:id="@+id/nextText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_criteria_placeholder"
            android:textColor="@color/secondaryTextColor"
            android:textSize="12sp"
            tools:text="Have you finished the last bite of your sandwich or soup?"/>
    </LinearLayout>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="75dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="4dp"
        android:text="@string/next_button_text"
        android:textStyle="bold"/>

</RelativeLayout>